--- a/src/index.pug
+++ b/src/index.pug
@@ -30,7 +30,7 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
 
         link(rel='manifest', href='manifest.json')
         link(rel='apple-touch-icon', href='img/icon.png')
-        link(rel='icon', href='img/favicon.ico')
+        link(rel='icon', href='img/favicon.png')
         link(rel='stylesheet', href='css/main.min.css')
         link(href='//fonts.googleapis.com/css?family=Special+Elite', rel='stylesheet')
     body.body
@@ -38,14 +38,11 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
         main#main.main
             .container
                 h1.title
-                    img(src='img/maionoise.svg', alt='Maionoi.se')
+                    | Milico
                 h2.subtitle
-                    | - digital.CONTENT -
+                    | Você pode substituir Intervenção Militar por Flores, por exemplo.
                 p
-                    a(href='mailto:hello@maionoi.se') EMAIL
-                    a(href='http://facebook.com/maionoise', target='_blank', rel='noopener') FB
-                    a(href='http://instagram.com/maionoise', target='_blank', rel='noopener') IG
-                    a(href='http://vimeo.com/maionoise', target='_blank', rel='noopener') VM
+                    a(href='#', target="_blank", rel="noopener") Baixar extensão
         script.
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
