--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -34,7 +34,7 @@ html {
 .body {
     background-color: $white;
     cursor: default;
-    font-family: 'Special Elite', cursive;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 2rem;
@@ -55,11 +55,10 @@ html {
     z-index: 1;
 
     &::before {
-        background: url('../img/pattern-white.png') top left repeat;
+        background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23000000' fill-opacity='0.2' fill-rule='evenodd'/%3E%3C/svg%3E");
         content: '';
         height: 100%;
         left: 0;
-        opacity: .5;
         position: fixed;
         top: 0;
         width: 100%;
@@ -69,7 +68,11 @@ html {
 
 .main {
     .title {
+        color: $white;
+        font-family: 'Special Elite', cursive;
+        font-weight: 700;
         margin: 0;
+        text-transform: uppercase;
         width: 300px;
 
         @media (min-width: map-get($grid-breakpoints, md)) {
@@ -86,34 +89,25 @@ html {
 
     p {
         a {
-            background: rgba($black, .5);
+            align-items: center;
+            background-color: $green;
+            border: 2px solid darken($green, 10%);
+            border-radius: 50px;
             color: $white;
-            cursor: pointer;
-            font-size: 10px;
-            margin: 0 2px;
-            padding: 5px 10px;
+            display: flex;
+            font-size: 1.2rem;
+            font-weight: 700;
+            justify-content: center;
+            line-height: 1.2rem;
+            margin: 0 15px;
+            padding: 5px;
             position: relative;
             text-decoration: none;
-            transition: background $timing $easing-out;
-
-            &::before {
-                background: $white;
-                bottom: 50%;
-                content: '';
-                height: 1px;
-                left: 0;
-                margin-bottom: -1px;
-                position: absolute;
-                transition: width $timing $easing-out;
-                width: 0;
-            }
+            transition: background-color $timing $easing-out;
+            width: 200px;
 
             &:hover {
-                background: rgba($black, 0);
-
-                &::before {
-                    width: 100%;
-                }
+                background-color: darken($green, 5%);
             }
         }
     }
