--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,6 +2,7 @@
 
 $white:                  #fff !default;
 $black:                  #000 !default;
+$green:                  #00b894 !default;
 
 $easing-out:             cubic-bezier(.19, 1, .22, 1) !default;
 $easing-in:              cubic-bezier(.895, .03, .685, .22) !default;
