--- a/src/index.pug
+++ b/src/index.pug
@@ -40,7 +40,11 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
                 h1.title
                     | Milico
                 h2.subtitle
-                    | Você pode substituir Intervenção Militar por Flores, por exemplo.
+                    | Você pode substituir
+                    |
+                    span
+                    |
+                    | por Flores, por exemplo.
                 p
                     a(href='#', target="_blank", rel="noopener") Baixar extensão
         script.
