--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -32,12 +32,13 @@ html {
 }
 
 .body {
-    background-color: $white;
+    background-color: $black;
+    color: $white;
     cursor: default;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1.2rem;
     font-weight: 400;
-    line-height: 2rem;
+    line-height: 1.6rem;
     overflow-x: hidden;
     overflow-y: scroll;
     text-size-adjust: 100%;
@@ -68,23 +69,33 @@ html {
 
 .main {
     .title {
-        color: $white;
         font-family: 'Special Elite', cursive;
+        font-size: 4rem;
         font-weight: 700;
         margin: 0;
+        text-align: center;
+        text-shadow: 0 4px 0 $black;
         text-transform: uppercase;
-        width: 300px;
-
-        @media (min-width: map-get($grid-breakpoints, md)) {
-            width: 500px;
-        }
+        width: 250px;
     }
 
     .subtitle {
-        color: $white;
-        font-size: 11px;
-        letter-spacing: 3px;
+        font-size: 1.2rem;
+        font-weight: 700;
+        margin: 20px 0 40px;
         text-align: center;
+        text-shadow: 0 2px 0 $black;
+        width: 300px;
+
+        span {
+            display: inline-block;
+
+            &:before {
+                content: 'Intervenção Militar';
+                display: inline-block;
+                position: relative;
+            }
+        }
     }
 
     p {
@@ -98,13 +109,11 @@ html {
             font-size: 1.2rem;
             font-weight: 700;
             justify-content: center;
-            line-height: 1.2rem;
-            margin: 0 15px;
-            padding: 5px;
+            margin: 0;
+            padding: 15px 30px 20px 30px;
             position: relative;
             text-decoration: none;
             transition: background-color $timing $easing-out;
-            width: 200px;
 
             &:hover {
                 background-color: darken($green, 5%);
