--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -39,8 +39,7 @@ html {
     font-size: 1.2rem;
     font-weight: 400;
     line-height: 1.6rem;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
     text-size-adjust: 100%;
 }
 
@@ -56,7 +55,7 @@ html {
     z-index: 1;
 
     &::before {
-        background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23000000' fill-opacity='0.2' fill-rule='evenodd'/%3E%3C/svg%3E");
+        background-image: url('data:image/svg+xml,%3Csvg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath d="M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z" fill="%23000000" fill-opacity="0.2" fill-rule="evenodd"/%3E%3C/svg%3E');
         content: '';
         height: 100%;
         left: 0;
@@ -90,7 +89,8 @@ html {
         span {
             display: inline-block;
 
-            &:before {
+            &::before {
+                color: $green;
                 content: 'Intervenção Militar';
                 display: inline-block;
                 position: relative;
@@ -102,15 +102,15 @@ html {
         a {
             align-items: center;
             background-color: $green;
-            border: 2px solid darken($green, 10%);
+            border: 2px solid darken($green, 25%);
             border-radius: 50px;
-            color: $white;
+            color: darken($green, 25%);
             display: flex;
             font-size: 1.2rem;
             font-weight: 700;
             justify-content: center;
             margin: 0;
-            padding: 15px 30px 20px 30px;
+            padding: 10px 20px 13px;
             position: relative;
             text-decoration: none;
             transition: background-color $timing $easing-out;
@@ -130,33 +130,29 @@ html {
         position: relative;
         z-index: 3;
     }
+}
 
-    .actions {
-        display: flex;
-        flex-direction: row;
+.footer {
+    bottom: 30px;
+    font-size: 11px;
+    line-height: 14px;
+    position: fixed;
+    right: 30px;
+    text-align: right;
+    z-index: 3;
 
-        a {
-            align-items: center;
-            background-color: rgba($white, .2);
-            border: 2px solid $white;
-            border-radius: 50px;
-            color: $white;
-            display: flex;
-            font-size: 1.2rem;
-            font-weight: 700;
-            height: 50px;
-            justify-content: center;
-            line-height: 1.2rem;
-            margin: 0 15px;
-            padding: 5px;
-            position: relative;
-            text-decoration: none;
-            transition: background-color $timing $easing-out;
-            width: 200px;
+    p {
+        margin: 0;
+    }
 
-            &:hover {
-                background-color: rgba($black, .2);
-            }
+    a {
+        border-bottom: 2px solid $green;
+        color: $white;
+        padding-bottom: 5px;
+        text-decoration: none;
+
+        &:hover {
+            border-bottom: 2px solid $white;
         }
     }
 }
