--- a/src/index.pug
+++ b/src/index.pug
@@ -7,25 +7,25 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
         meta(name='viewport', content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
 
-        title Milico - Extensão do Google Chrome
-        meta(name='description', content='Você pode substituir Intervenção Militar por Flores, por exemplo.')
+        title Milico - Extensão para Google Chrome
+        meta(name='description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
         link(rel='canonical', href='http://milico.xxxxxxx.ooo')
 
         meta(property='fb:app_id', content='155658704635453')
         meta(property='og:type', content='website')
-        meta(property='og:title', content='Milico - Extensão do Google Chrome')
-        meta(property='og:description', content='Você pode substituir Intervenção Militar por Flores, por exemplo.')
+        meta(property='og:title', content='Milico - Extensão para Google Chrome')
+        meta(property='og:description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
         meta(property='og:image', content='http://milico.xxxxxxx.ooo/img/share.jpg')
         meta(property='og:url', content='http://milico.xxxxxxx.ooo')
 
-        meta(itemprop='name', content='Milico - Extensão do Google Chrome')
-        meta(itemprop='description', content='Você pode substituir Intervenção Militar por Flores, por exemplo.')
+        meta(itemprop='name', content='Milico - Extensão para Google Chrome')
+        meta(itemprop='description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
         meta(itemprop='image', content='http://milico.xxxxxxx.ooo/img/share.jpg')
         meta(itemprop='url', content='http://milico.xxxxxxx.ooo')
 
         meta(name='twitter:card', content='summary')
-        meta(name='twitter:title', content='Milico - Extensão do Google Chrome ')
-        meta(name='twitter:description', content='Você pode substituir Intervenção Militar por Flores, por exemplo.')
+        meta(name='twitter:title', content='Milico - Extensão para Google Chrome ')
+        meta(name='twitter:description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
         meta(name='twitter:image', content='http://milico.xxxxxxx.ooo/img/share.jpg')
 
         link(rel='manifest', href='manifest.json')
@@ -44,9 +44,13 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
                     |
                     span
                     |
-                    | por Flores, por exemplo.
+                    | por flores, por exemplo. 🌸🌷🌼🌺🌻
                 p
-                    a(href='#', target="_blank", rel="noopener") Baixar extensão
+                    a(href='#', target="_blank", rel="noopener") Baixar para Google Chrome
+        footer.footer
+            p
+                | Photo:<br>
+                a(href='http://fr.wikipedia.org/wiki/La_Fille_%C3%A0_la_fleur', target="_blank", rel="noopener") La Fille à la fleur - RIBOUD, Marc.
         script.
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
