--- a/src/index.pug
+++ b/src/index.pug
@@ -46,7 +46,7 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
                     |
                     | por flores, por exemplo. 🌸🌷🌼🌺🌻
                 p
-                    a(href='#', target="_blank", rel="noopener") Baixar para Google Chrome
+                    a(href='http://bit.ly/MilicoChrome', target="_blank", rel="noopener") Baixar para Google Chrome
         footer.footer
             p
                 | Photo:<br>
