--- a/src/index.pug
+++ b/src/index.pug
@@ -9,24 +9,24 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
 
         title Milico - Extensão para Google Chrome
         meta(name='description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
-        link(rel='canonical', href='http://milico.xxxxxxx.ooo')
+        link(rel='canonical', href='https://milico.xxxxxxx.ooo')
 
         meta(property='fb:app_id', content='155658704635453')
         meta(property='og:type', content='website')
         meta(property='og:title', content='Milico - Extensão para Google Chrome')
         meta(property='og:description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
-        meta(property='og:image', content='http://milico.xxxxxxx.ooo/img/share.jpg')
-        meta(property='og:url', content='http://milico.xxxxxxx.ooo')
+        meta(property='og:image', content='https://milico.xxxxxxx.ooo/img/share.jpg')
+        meta(property='og:url', content='https://milico.xxxxxxx.ooo')
 
         meta(itemprop='name', content='Milico - Extensão para Google Chrome')
         meta(itemprop='description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
-        meta(itemprop='image', content='http://milico.xxxxxxx.ooo/img/share.jpg')
-        meta(itemprop='url', content='http://milico.xxxxxxx.ooo')
+        meta(itemprop='image', content='https://milico.xxxxxxx.ooo/img/share.jpg')
+        meta(itemprop='url', content='https://milico.xxxxxxx.ooo')
 
         meta(name='twitter:card', content='summary')
         meta(name='twitter:title', content='Milico - Extensão para Google Chrome ')
         meta(name='twitter:description', content='Você pode substituir Intervenção Militar por flores, por exemplo. 🌸🌷🌼🌺🌻')
-        meta(name='twitter:image', content='http://milico.xxxxxxx.ooo/img/share.jpg')
+        meta(name='twitter:image', content='https://milico.xxxxxxx.ooo/img/share.jpg')
 
         link(rel='manifest', href='manifest.json')
         link(rel='apple-touch-icon', href='img/icon.png')
@@ -46,15 +46,14 @@ html(lang='en', itemscope='', itemtype='http://schema.org')
                     |
                     | por flores, por exemplo. 🌸🌷🌼🌺🌻
                 p
-                    a(href='http://bit.ly/MilicoChrome', target="_blank", rel="noopener") Baixar para Google Chrome
+                    a(href='https://bit.ly/MilicoChrome', target='_blank', rel='noopener') Baixar para Google Chrome
         footer.footer
             p
                 | Photo:<br>
-                a(href='http://fr.wikipedia.org/wiki/La_Fille_%C3%A0_la_fleur', target="_blank", rel="noopener") La Fille à la fleur - RIBOUD, Marc.
+                a(href='http://fr.wikipedia.org/wiki/La_Fille_%C3%A0_la_fleur', target='_blank', rel='noopener') La Fille à la fleur - RIBOUD, Marc.
+        script(async='', src='https://www.googletagmanager.com/gtag/js?id=UA-6977973-25')
         script.
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-6977973-25', 'auto');
-            ga('send', 'pageview');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-6977973-25');
